# narrowsh

./: CHANGELOG  Makefile  Makefile.in  README.md  configure  configure.ac  main.c
libUseful-5/: .Hash.h.swp  config.status  libUseful.so.5  libUseful.so.5.25
